<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:openDrawer="start">

    <!-- ALL -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- CONTENT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- RECHERCHE -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/txtSearchProduct"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:imeOptions="actionDone"
                    android:hint="@string/ajouter_produit"
                    android:importantForAutofill="no"
                    android:singleLine="true"
                    android:inputType="text"
                    android:maxLines="1"/>

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- LAYOUT EMPTY -->
                <FrameLayout
                    android:id="@+id/layoutEmpty"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center"
                    android:alpha="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha=".5"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="70dp"
                            android:layout_marginEnd="20dp"
                            android:src="@drawable/arrow"
                            android:rotation="290"
                            android:contentDescription="@string/image_fleche_top"
                            app:tint="@color/second"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ajouter_produit_depuis_recherche"
                            android:textSize="22sp"
                            android:textColor="@color/main"
                            android:fontFamily="@font/main"
                            android:layout_gravity="bottom"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:alpha=".5"
                        android:layout_marginBottom="80dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/ajouter_produit_depuis_produits"
                            android:gravity="end"
                            android:textSize="22sp"
                            android:layout_weight="1"
                            android:fontFamily="@font/main"
                            android:textColor="@color/main"/>

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="20dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/arrow"
                            android:contentDescription="@string/image_fleche_bottom"
                            android:rotation="60"
                            app:tint="@color/second"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginBottom="50dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="#000"
                            android:text="@string/liste_vide"/>

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/empty_liste"
                            android:src="@drawable/empty_list"
                            app:tint="#000"/>

                    </LinearLayout>

                </FrameLayout>

                <!-- LISTE -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/productListeRecyclerViewParent"
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:elevation="10dp"
                        android:layout_weight="1">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/productListeRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                    </androidx.cardview.widget.CardView>

                    <FrameLayout
                        android:id="@+id/fragmentListesBtnGoShopping"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_gravity="bottom"
                        android:layout_marginEnd="85dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="15dp"
                        android:elevation="5dp"
                        android:background="@drawable/button_round_background">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="35dp"
                                android:src="@drawable/go_shopping"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"
                                android:layout_marginEnd="15dp"
                                android:contentDescription="@string/image_go_shopping"
                                app:tint="#fff"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textColor="#fff"
                                android:text="@string/liste_finie"
                                android:textSize="20sp"
                                android:fontFamily="@font/main"/>

                        </LinearLayout>

                    </FrameLayout>

                </LinearLayout>

                <!-- DROPDOWN RECHERCHE -->
                <FrameLayout
                    android:id="@+id/containerFiltre"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#8111">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/productFilteredRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                    </FrameLayout>

                </FrameLayout>

            </FrameLayout>

        </LinearLayout>

        <!-- BOUTON ALL PRODUCTS -->
        <ImageView
            android:id="@+id/btnAllProducts"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:adjustViewBounds="false"
            android:src="@drawable/groceries"
            android:contentDescription="@string/fragment_listes_bouton_all_products"
            app:tint="#fff"
            android:background="@drawable/button_bottom_right_background"
            android:layout_gravity="bottom|end"/>

    </FrameLayout>

    <!-- DRAWER -->
    <FrameLayout
        android:id="@+id/panelRight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:layout_gravity="end">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-15dp"
            android:layout_marginEnd="-15dp"
            android:background="@android:color/transparent"
            app:cardCornerRadius="15dp"

            app:cardElevation="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productAllRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</androidx.drawerlayout.widget.DrawerLayout>